# iCkernel

./: README.md  README_kr.md  install.py  kernel.json  kernel.py  pyproject.toml
ic_kernel/: install.py  kernel.py
simple_c_kernel/: install.py
