[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simple-c-kernel-test"
version = "0.1.0"
description = "Simple C Kernel for Jupyter"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "jupyter",
    "ipykernel>=6.0.0",
]

[project.scripts]
install-c-kernel = "simple_c_kernel.install:main"