[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ic-kernel"
version = "0.1.0"
description = "Interactive C Kernel for Jupyter"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "jupyter",
    "ipykernel>=6.0.0",
]

[project.scripts]
install-ic-kernel = "ic_kernel.install:main"